welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:5: error: not found: value avancer
	baisseBrosse(); leveBrosse(); gauche(); avancer(); avancer(); 
                                                ^PictureMono:5: error: not found: value avancer
	baisseBrosse(); leveBrosse(); gauche(); avancer(); avancer(); 
                                                           ^